--- a/criarflashcard.html
+++ b/criarflashcard.html
@@ -58,6 +58,13 @@
                     <option value="portugues">Português</option>
                     <option value="filoesocio">Filo/Socio</option>
                   </select>
+
+                  <br>
+                  <div class="mb-3">
+                    <label for="formFileMultiple" class="form-label">IMAGEM PARA AJUDAR NA RESPOSTA:</label>
+                    <input class="form-control" type="file" id="formFileMultiple" multiple>
+                  </div>
+                  
                   <br>
                   <div class="text-center">
                     <button type="submit" class="btn btn-primary">Submeter</button>
@@ -95,7 +102,7 @@
               };
 
               // Envia os dados do formulário para o backend
-              fetch('http://ec2-54-147-170-79.compute-1.amazonaws.com:8080/flashcard', {
+              fetch('https://localhost:8443/flashcard', {
                   method: 'POST', // Método HTTP
                   headers: {
                       'Content-Type': 'application/json' // Tipo de conteúdo do corpo da requisição
